# local-agent-gateway

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build-release.yml
src/: backends.js  base.css  charts.js  components.css  dark-mode.css  dashboard.js  howto.js  index.html  logs.js  main.js  pages.css  settings.js  tray.html  utils.js
src-tauri/: Cargo.toml  builtin_patterns.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cursor_hooks.rs  database.rs  dlp.rs  dlp_pattern_config.rs  lib.rs  main.rs  proxy.rs  requestresponsemetadata.rs
src-tauri/src/backends/: claude.rs  codex.rs  custom.rs  mod.rs
src-tauri/src/commands/: backends.rs  dlp.rs  stats.rs
