[package]
name = "dlpdemoapp"
version = "0.1.0"
description = "Agent Gateway by Quilr"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dlpdemoapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Proxy server dependencies
axum = "0.7"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Database
rusqlite = { version = "0.35", features = ["bundled"] }
sqlite-zstd = { git = "https://github.com/bedapudi6788/sqlite-zstd.git" }
# Pin zstd versions to avoid conflicts
zstd-sys = "=2.0.1"
chrono = "0.4"
async-stream = "0.3"

# Compression
flate2 = "1.0"

# Hex encoding
hex = "0.4"

# DLP regex matching
regex = "1"

